# Project_Template

./: .env  .gitignore  Initial_Instructions.txt  README.md  README.txt  Setup_Instructions.txt  data_manager.py  pyproject.toml  requirements.txt
configs/: ibkr_config.py  polygon_config.py
handlers/: ibkr_api_wrapper.py  ibkr_base_handler.py  ibkr_option_handler.py  ibkr_stock_handler.py  polygon_api_handler_historical.py  yfinance_handler.py
stubs/polygon/: __init__.pyi
tests/: test_options_models.py  test_performance_metrics.py  test_plotting_utils.py  test_polygon_utils.py
utils/: __init__.py  financial_calculations.py  ibkr_models.py  logging_config.py  options_models.py  performance_metrics.py  plotting_utils.py  polygon_utils.py
